@@ -122,6 +122,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-19 sam. 01:50]--[2016-11-19 sam. 02:18] =>  0:28
      CLOCK: [2016-11-19 sam. 00:07]--[2016-11-19 sam. 01:05] =>  0:58
      CLOCK: [2016-11-18 ven. 23:20]--[2016-11-18 ven. 23:46] =>  0:26
      CLOCK: [2016-11-18 ven. 04:03]--[2016-11-18 ven. 04:21] =>  0:18
@@ -165,11 +166,14 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Handle Alt+Enter in GameEngine
       - [-] Next thing is to handle GameEngine::reconfigure()
         - [X] Must get the acual fullscreen value from Ogre config
-        - [ ] Handle the Ogre restart as for shutdown. A boolean flag
+        - [-] Handle the Ogre restart as for shutdown. A boolean flag
 	  member that shutdown and restart Ogre
 	  But that's the function that can handle restart after
-	  frameRenderingQueued returns false
-	  - Directly in main.cpp
+	  frameRenderingQueued returns false 
+	  - [X] Directly in main.cpp
+	  - [X] The CEGUI log tells we don't have correctly shutdown   
+	    CEGUI::System object is already initialized
+          - [ ] Must implement GameEngine::reconfigure()
 	- [ ] Save current gamestate and serialize it
         - [ ] Ogre startup process must stay in little members function
 	  so we exactly know the order of initialization
