@@ -1,5 +1,9 @@
 2016-11-19  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/main.cpp (main): beter exception message handling.
+	* src/client/GameEngine.cpp (~GameEngine): better cleanup process.
+	* src/client/main.cpp (main): handle the restarting game engine.
+
 	* src/client/GameEngine.cpp (restarting): new getter for mRestart.
 	* src/client/GameEngine.cpp (keyPressed): set mToFullscreen to
 	!mWindow->isFullscreen().
